force-app/main/default/objects/CIBE_TranslateConfiguration__mdt/CIBE_TranslateConfiguration__mdt.object-meta.xml
<CustomObject>
    <description>Metadata con los valores de traducción para los componentes de la Home, Eventos, Tareas y flows</description>
    <label>Translate Configuration</label>
    <pluralLabel>Translate Configurations</pluralLabel>
</CustomObject>