force-app/main/default/objects/CIBE_TranslateConfiguration__mdt/fields/CIBE_Language__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>en_US</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>