force-app/main/default/objects/CIBE_TranslateConfiguration__mdt/fields/CIBE_TranslationName__c.field-meta.xml
<CustomField>
    <fullName>CIBE_TranslationName__c</fullName>
    <description>Indicativo con el nombre de la traduccion</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>