force-app/main/default/objects/CIBE_TranslateConfiguration__mdt/fields/CIBE_Value__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Value__c</fullName>
    <description>Metadata con el valor de la traducción</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>